<resources>
    <string name="app_name">NikeShop</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">پروفایل</string>
    <string name="search">جستجو</string>
    <string name="latest">جدیدترین</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="popular">پرفروش ترین</string>
    <string name="productName">نام محصول</string>
    <string name="commentTile">عنوان کامنت</string>
    <string name="commentDate">تاریخ کامنت</string>
    <string name="commentAuthor">نویسنده</string>
    <string name="comments">نظرات کاربران</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="viewAllComments">مشاهده همه نظرات</string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLatest">جدیدترین</string>
    <string name="sortPopular">پربازدیدترین</string>
    <string name="sortPriceHighToLow">گران ترین</string>
    <string name="sortPriceLowToHigh">ارزان ترین</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="unknownError">خطای نامشخص</string>
    <string name="successAddToCart">به سبد خرید اضافه شد</string>
    <string name="LoginScreenTitle">ورود به حساب کاربری</string>
    <string name="loginHint">ایمیل و رمز خود را وارد کنید</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="loginTitle">ورود</string>
    <string name="notAccount">حساب کاربردی ندارید؟</string>
    <string name="signUp">ثبت نام</string>
    <string name="haveAccount">حساب کاربری دارید؟</string>
    <string name="singupScreenTitle">ایجاد حساب کاربری</string>
    <string name="loginAccount">ورود به حساب</string>
    <string name="pay">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزئیات خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="payableCost">هزینه قابل پرداخت</string>
    <string name="cartEmptyStateLoginRequired">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyStateCallToAction">ورود به حساب کاربری</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست !!</string>
    <string name="favorites">لیست علاقه مندی ها</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="guest">کاربر مهمان</string>
    <string name="favorites_empty_state_message">هنوز محصولی به لیست علاقه مندی ها اضافه نکردی !!</string>
    <string name="favorites_help_message">برای حذف محصول انگشت خود را روی آن نگه دارید</string>
    <string name="orderHistory_orderId">شناسه سفارش</string>
    <string name="orderHistory_payable">مبلغ</string>

    <string-array name="sortArray">
        <item>@string/sortLatest</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>

</resources>