<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"

        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/singupScreenTitle"
            android:textAppearance="?textAppearanceHeadline5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginTop="8dp"
            android:text="@string/loginHint" />

        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_marginTop="24dp"
            android:hint="@string/email" />

        <EditText
            android:layout_width= "270dp"
            android:layout_height="wrap_content"
            style="@style/Theme.Nike.AuthTheme.EditText"

            android:layout_marginTop="24dp"
            android:hint="@string/password" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="270dp"
            style="@style/Theme.Nike.AuthTheme.Button"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/signUp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/haveAccount" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile_bold"
            android:text="@string/loginAccount" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>