<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:strokeColor="?dividerColor"
            app:strokeWidth="1dp"
            android:scaleType="centerInside"
            app:shapeAppearance="@style/Avatar"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/ic_nike_logo"/>
        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?textAppearanceBody1"
            tools:text="@string/guest"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:divider="@drawable/shape_divider"
            android:showDividers="middle|end|beginning"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favoriteProductButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileLinks"
                android:text="@string/favorites"
                app:drawableStartCompat="@drawable/ic_favorites_20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileLinks"
                android:text="@string/orderHistory"
                app:drawableStartCompat="@drawable/ic_order_history" />

            <TextView
                android:id="@+id/authButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileLinks"
                android:text="@string/signIn"
                app:drawableStartCompat="@drawable/ic_sign_in" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>