<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".features.product.ProductDetailActivity"
    tools:ignore="MissingDefaultResource">

    <com.example.nikeshop.view.scroll.ObservableScrollView
        android:id="@+id/observableScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.nikeshop.view.NikeImageView
                    android:id="@+id/productImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:viewAspectRatio="1" />
            </FrameLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/productTitleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/productName"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@+id/previousPriceTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/previousPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="125000 تومان" />

                <TextView
                    android:id="@+id/currentPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="@+id/previousPriceTextView"
                    app:layout_constraintTop_toBottomOf="@+id/previousPriceTextView"
                    tools:text="110000 تومان" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:text="ین کتونی شدیدا برای دویدن و راه رفتن مناسب هست و تقریبا. هیچ فشار مخربی رو نمیذارد به پا و زانوان شما انتقال داده شود"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/comments"
                    android:textAppearance="?textAppearanceHeadline6"
                    android:textColor="?android:textColorSecondary" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/insertComment" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp">
            </androidx.recyclerview.widget.RecyclerView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewAllCommentsButtons"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viewAllComments"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>


        </LinearLayout>
    </com.example.nikeshop.view.scroll.ObservableScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:translationZ="5dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_favorites_20dp" />
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:alpha="0"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/toolbarTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="48dp"
            android:textAppearance="?textAppearanceHeadline6"
            tools:text="@string/productName" />
    </com.google.android.material.card.MaterialCardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>